--- a/src/GuiForm.form
+++ b/src/GuiForm.form
@@ -15,7 +15,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="dir"/>
+          <text value=""/>
         </properties>
       </component>
       <vspacer id="a76a9">
@@ -31,14 +31,6 @@
           <text value="Найти самые глубокие элементы"/>
         </properties>
       </component>
-      <component id="781bc" class="javax.swing.JTextArea" binding="output">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="4186a" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -46,6 +38,14 @@
         <properties>
           <text value="Укажите путь до папки"/>
         </properties>
+      </component>
+      <component id="7e2b0" class="javax.swing.JTextField" binding="output">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
